updated with some more javascript. fixed API issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,17 @@ h1 {
 
 
 }
+.card {
+    background-color: green;
 
+    
+}
 
-#forecastOne {
+/* #forecastOne {
     background-color: green;
 
 
-}
+} */
 #forecastFive{
     background-color: yellow;
     height: 200px;
